--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,10 @@
 - hosts: all
   become: true
 
+  vars:
+    do_certbot: 'false'
+
   roles:
     - docker
+    - { role: lets-encrypt, when: do_certbot == 'true'}
     - web
